// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`listTodoItems should list all todo items sorted correctly 1`] = `
{
  "message": {
    "type": "json",
    "value": [
      {
        "description": "",
        "id": "1",
        "status": "open",
        "title": "item 1",
      },
      {
        "description": "",
        "id": "1.1",
        "status": "open",
        "title": "sub-item 1.1",
      },
      {
        "description": "",
        "id": "1.2",
        "status": "completed",
        "title": "sub-item 1.2",
      },
      {
        "description": "",
        "id": "2",
        "status": "completed",
        "title": "item 2",
      },
      {
        "description": "",
        "id": "10",
        "status": "open",
        "title": "item 10",
      },
    ],
  },
  "success": true,
}
`;

exports[`listTodoItems should filter items by status 1`] = `
{
  "message": {
    "type": "json",
    "value": [
      {
        "description": "",
        "id": "1.2",
        "status": "completed",
        "title": "sub-item 1.2",
      },
      {
        "description": "",
        "id": "2",
        "status": "completed",
        "title": "item 2",
      },
    ],
  },
  "success": true,
}
`;

exports[`listTodoItems should list sub-items for a given id 1`] = `
{
  "message": {
    "type": "json",
    "value": [
      {
        "description": "",
        "id": "1.1",
        "status": "open",
        "title": "sub-item 1.1",
      },
      {
        "description": "",
        "id": "1.2",
        "status": "completed",
        "title": "sub-item 1.2",
      },
    ],
  },
  "success": true,
}
`;
